--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -18,16 +18,17 @@
     justify-content: flex-end;
 
     .text-secondary {
-      font-size: 2rem;
+      font-size: 3rem;
       margin-bottom: 2rem;
+      color: blanchedalmond;
     }
   }
 
   &__items {
-    width: 60vw;
+    width: 50vw;
     margin: 2rem auto 0 auto;
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: auto;
     grid-gap: 2rem;
   }
 
@@ -38,7 +39,8 @@
     cursor: pointer;
 
     img {
-      width: 100%;
+      width: 50%;
+      justify-items: center;
     }
 
     &::after {
@@ -97,9 +99,13 @@
       translate(-3rem, -5rem);
   }
 
-  fec-image {
-    width: 10%;
-    height: 10%;
+  .project_wrapper {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .project_description{
+    margin-left: 50px;
   }
   
 }
